fix spacing on profile post paragraph

--- a/src/components/ProfilePost/ProfilePost.scss
+++ b/src/components/ProfilePost/ProfilePost.scss
@@ -93,11 +93,13 @@
     h5 {
       color: $brand-color;
       font-size: 1.1em;
-      margin-top: 10px;
+      margin: 10px;
+      margin-bottom: 0;
     }
 
     p {
       font-size: 1em;
+      margin: 0 10px;
     }
 
     #editDelete {
